welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: type mismatch;
 found   : Boolean(false)
 required: Int
	var vuBiscuit: Int=false
                           ^Program:6: error: type mismatch;
 found   : Boolean(true)
 required: Int
			vuBiscuit = true
                                    ^Program:8: error: type mismatch;
 found   : Boolean(false)
 required: Int
			vuBiscuit = false
                                    ^